--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,3 +1,19 @@
 .root {
   text-align: center;
 }
+
+.link {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.75rem;
+  height: 2.75rem;
+
+  border-radius: 0.625rem;
+  background-color: var(--baseColor);
+  box-shadow: 4px 4px 10px var(--darkColor), -4px -4px 10px var(--lightColor);
+}
